v1.1.0/modules/schema/pages/class/ShortCircuitTest.adoc
= `ShortCircuitTest`
:toclevels: 4


+++Short-circuit test results determine mesh impedance parameters. They include load losses and leakage impedances. For three-phase windings, the excitation can be a positive sequence (the default) or a zero sequence. There shall be at least one grounded winding.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ShortCircuitTest`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/TransformerTest.adoc[`TransformerTest`]
*** *`ShortCircuitTest`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<EnergisedEnd,`EnergisedEnd`>>
//| [[slots_table.EnergisedEnd]]<<EnergisedEnd,`EnergisedEnd`>>
| 1 +
xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Transformer end that voltage is applied to in this short-circuit test. The test voltage is chosen to induce rated current in...+++
| _n/a_

| <<GroundedEnds,`GroundedEnds`>>
//| [[slots_table.GroundedEnds]]<<GroundedEnds,`GroundedEnds`>>
| 1..* +
xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++All ends short-circuited in this short-circuit test.+++
| _n/a_

| <<current,`current`>>
//| [[slots_table.current]]<<current,`current`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Short circuit current..+++
| _n/a_

| <<energisedEndStep,`energisedEndStep`>>
//| [[slots_table.energisedEndStep]]<<energisedEndStep,`energisedEndStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Tap step number for the energised end of the test pair.+++
| _n/a_

| <<groundedEndStep,`groundedEndStep`>>
//| [[slots_table.groundedEndStep]]<<groundedEndStep,`groundedEndStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Tap step number for the grounded end of the test pair.+++
| _n/a_

| <<leakageImpedance,`leakageImpedance`>>
//| [[slots_table.leakageImpedance]]<<leakageImpedance,`leakageImpedance`>>
| 0..1 +
xref::class/Impedance.adoc[`Impedance`]
| +++Leakage impedance measured from a positive-sequence or single-phase short-circuit test.+++
| _n/a_

| <<leakageImpedanceZero,`leakageImpedanceZero`>>
//| [[slots_table.leakageImpedanceZero]]<<leakageImpedanceZero,`leakageImpedanceZero`>>
| 0..1 +
xref::class/Impedance.adoc[`Impedance`]
| +++Leakage impedance measured from a zero-sequence short-circuit test.+++
| _n/a_

| <<loss,`loss`>>
//| [[slots_table.loss]]<<loss,`loss`>>
| 0..1 +
xref::class/KiloActivePower.adoc[`KiloActivePower`]
| +++Load losses from a positive-sequence or single-phase short-circuit test.+++
| _n/a_

| <<lossZero,`lossZero`>>
//| [[slots_table.lossZero]]<<lossZero,`lossZero`>>
| 0..1 +
xref::class/KiloActivePower.adoc[`KiloActivePower`]
| +++Load losses from a zero-sequence short-circuit test.+++
| _n/a_

| <<power,`power`>>
//| [[slots_table.power]]<<power,`power`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Short circuit apparent power.+++
| _n/a_

| <<voltage,`voltage`>>
//| [[slots_table.voltage]]<<voltage,`voltage`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Short circuit voltage..+++
| _n/a_

| <<basePower,`basePower`>>
//| [[slots_table.basePower]]<<basePower,`basePower`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Base power at which the tests are conducted, usually equal to the rateds of one of the involved transformer ends.+++
| xref::class/TransformerTest.adoc[`TransformerTest`]

| <<temperature,`temperature`>>
//| [[slots_table.temperature]]<<temperature,`temperature`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Temperature at which the test is conducted.+++
| xref::class/TransformerTest.adoc[`TransformerTest`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#basePower]
=== `basePower`
+++Base power at which the tests are conducted, usually equal to the rateds of one of the involved transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTest.basePower`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/TransformerTest.adoc[`TransformerTest`]


|===

////
[.text-left]
--
<<slots_table.basePower,&#10548;>>
--
////


//[discrete]
[#current]
=== `current`
+++Short circuit current..+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.current`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.current,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EnergisedEnd]
=== `EnergisedEnd`
+++Transformer end that voltage is applied to in this short-circuit test. The test voltage is chosen to induce rated current in the energised end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.EnergisedEnd`
| Cardinality
| 1
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.EnergisedEnd,&#10548;>>
--
////


//[discrete]
[#energisedEndStep]
=== `energisedEndStep`
+++Tap step number for the energised end of the test pair.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.energisedEndStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.energisedEndStep,&#10548;>>
--
////


//[discrete]
[#GroundedEnds]
=== `GroundedEnds`
+++All ends short-circuited in this short-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.GroundedEnds`
| Cardinality
| 1..*
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.GroundedEnds,&#10548;>>
--
////


//[discrete]
[#groundedEndStep]
=== `groundedEndStep`
+++Tap step number for the grounded end of the test pair.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.groundedEndStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.groundedEndStep,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#leakageImpedance]
=== `leakageImpedance`
+++Leakage impedance measured from a positive-sequence or single-phase short-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.leakageImpedance`
| Cardinality
| 0..1
| Type
| xref::class/Impedance.adoc[`Impedance`]


|===

////
[.text-left]
--
<<slots_table.leakageImpedance,&#10548;>>
--
////


//[discrete]
[#leakageImpedanceZero]
=== `leakageImpedanceZero`
+++Leakage impedance measured from a zero-sequence short-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.leakageImpedanceZero`
| Cardinality
| 0..1
| Type
| xref::class/Impedance.adoc[`Impedance`]


|===

////
[.text-left]
--
<<slots_table.leakageImpedanceZero,&#10548;>>
--
////


//[discrete]
[#loss]
=== `loss`
+++Load losses from a positive-sequence or single-phase short-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.loss`
| Cardinality
| 0..1
| Type
| xref::class/KiloActivePower.adoc[`KiloActivePower`]


|===

////
[.text-left]
--
<<slots_table.loss,&#10548;>>
--
////


//[discrete]
[#lossZero]
=== `lossZero`
+++Load losses from a zero-sequence short-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.lossZero`
| Cardinality
| 0..1
| Type
| xref::class/KiloActivePower.adoc[`KiloActivePower`]


|===

////
[.text-left]
--
<<slots_table.lossZero,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#power]
=== `power`
+++Short circuit apparent power.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.power`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

////
[.text-left]
--
<<slots_table.power,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#temperature]
=== `temperature`
+++Temperature at which the test is conducted.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTest.temperature`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]

| Inherited from
| xref::class/TransformerTest.adoc[`TransformerTest`]


|===

////
[.text-left]
--
<<slots_table.temperature,&#10548;>>
--
////


//[discrete]
[#voltage]
=== `voltage`
+++Short circuit voltage..+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ShortCircuitTest.voltage`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.voltage,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`] | xref::class/TransformerEndInfo.adoc#GroundedEndShortCircuitTests[`GroundedEndShortCircuitTests`]


|===

